<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/login_layout"
    android:background="@color/app_screen_background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_card_margin"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        card_view:elevation="8dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_card_padding">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username_hint"
                android:ems="10"
                android:id="@+id/login_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_password"
                android:hint="@string/password_hint"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirm_password"
                android:hint="@string/confirm_password_hint"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_btn_height"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:background="@drawable/button_background"
                android:layout_marginTop="@dimen/default_margin_vertical"
                android:textColor="@color/default_btn_text_color"
                android:textSize="@dimen/login_btn_text_size"
                android:textAllCaps="false"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_height"
            android:layout_margin="@dimen/login_card_margin"
            />
    </LinearLayout>
</RelativeLayout>
