<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_screen_background_color"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"
            android:text="@string/others_around_you"
            android:id="@+id/others_around_you"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/default_margin_vertical"
            android:textColor="@color/default_btn_text_color"
            android:textSize="@dimen/login_btn_text_size"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"
            android:text="@string/team_mission"
            android:id="@+id/team_mission"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/default_margin_vertical"
            android:textColor="@color/default_btn_text_color"
            android:textSize="@dimen/login_btn_text_size"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"
            android:text="@string/rewards"
            android:id="@+id/rewards"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/default_margin_vertical"
            android:textColor="@color/default_btn_text_color"
            android:textSize="@dimen/login_btn_text_size"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>
